# sel4-microkit-examples

./: Cargo.toml  flake.nix
hello-world/: Cargo.toml  hello-world.system
hello-world/.cargo/: config.toml
hello-world/bar/: Cargo.toml
hello-world/bar/src/: main.rs
hello-world/foo/: Cargo.toml
hello-world/foo/src/: main.rs
hello-world/src/: main.rs
link/: aarch64-sel4.ld
