[package]
name = "bar"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", default-features = false }
sel4-microkit-driver-adapters = { git = "https://github.com/seL4/rust-sel4" }
sel4-microkit-message = { git = "https://github.com/seL4/rust-sel4" }
sel4-sp804-driver = { git = "https://github.com/seL4/rust-sel4" }
